--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
+    "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.1.0",
+    "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
     "socket.io-client": "^4.7.5",
     "whatsapp": "file:.."
